--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,29 @@
-.body {
-    
+body {
+
+}
+.box {
+    background-color: #b3c2bf;
+    color: #dae7d6;
+}
+.header {
+    padding-top: 1.25em;
+    font-family: 'Maven Pro', sans-serif;
+    text-align: center;
+    color: #e9ece5;
+    font-size:7em;
+}
+.mountains {
+    padding-top: 0px;
+    width: 20%
+    height: 20%;
+    max-width: 100vw;
+    align-items: center;
+}
+.info {
+    padding-top: .25em;
+    padding-bottom: 0px;S
+    font-family: 'Maven Pro', sans-serif;
+    text-align: center;
+    color: #e9ece5;
+    font-size:1.5em;
 }
