--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,44 @@ body {
     color: #e9ece5;
     font-size:1.5em;
 }
+.topnav {
+    background-color: transparent;
+    font-family: 'Maven Pro', sans-serif;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    position: relative;
+    float: left;
+    color: #e9ece5;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.topnav a:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  border-bottom: 2px solid #e9ece5;
+  transition: 0.4s;
+}
+/* Change the color of links on hover */
+.topnav a:hover {
+    background-color: transparent;
+    color: #e9ece5;
+    text-decoration: none;
+}
+.topnav a:hover:after {
+  width: 100%;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+    background-color: transparent;
+    text-decoration: none;
+    color: white;
+}
