--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,24 @@ body {
 .box {
     background-color: #b3c2bf;
     color: #dae7d6;
+    
+
 }
 .header {
-    padding-top: 1.25em;
+    padding-top: 0px;
     font-family: 'Maven Pro', sans-serif;
     text-align: center;
     color: #e9ece5;
     font-size:7em;
 }
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .mountains {
-    padding-top: 0px;
+    padding-top: 1em;
     width: 20%
     height: 20%;
     max-width: 100vw;
@@ -21,7 +29,7 @@ body {
 }
 .info {
     padding-top: .25em;
-    padding-bottom: 0px;S
+    padding-bottom: 0px;
     font-family: 'Maven Pro', sans-serif;
     text-align: center;
     color: #e9ece5;
@@ -31,6 +39,7 @@ body {
     background-color: transparent;
     font-family: 'Maven Pro', sans-serif;
     overflow: hidden;
+    height: 20px;
 }
 
 /* Style the links inside the navigation bar */
@@ -61,7 +70,6 @@ body {
 .topnav a:hover:after {
   width: 100%;
 }
-
 /* Add a color to the active/current link */
 .topnav a.active {
     background-color: transparent;
