--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,6 @@ body {
 .box {
     background-color: #b3c2bf;
     color: #dae7d6;
-    
-
 }
 .header {
     padding-top: 0px;
@@ -14,26 +12,12 @@ body {
     color: #e9ece5;
     font-size:7em;
 }
-.container {
+.topnav .container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-.mountains {
-    padding-top: 1em;
-    width: 20%
     height: 20%;
-    max-width: 100vw;
-    align-items: center;
-}
-.info {
-    padding-top: .25em;
-    padding-bottom: 0px;
-    font-family: 'Maven Pro', sans-serif;
-    text-align: center;
-    color: #e9ece5;
-    font-size:1.5em;
 }
 .topnav {
     background-color: transparent;
@@ -75,4 +59,20 @@ body {
     background-color: transparent;
     text-decoration: none;
     color: white;
+}
+
+.mascot {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 41%;
+}
+#mascot {
+    max-width:30%;
+    max-height:30%;
+    padding-top: 3em;
+
+}
+
+#task {
+    align-items: center;
 }
